DEVELOPMENT: Core Module - create base model and user model and setup admin pannel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ target-version = "py39"
 [tool.black]
 target-version = ["py39"]
 line-length = 120
-include = '\.pyi?$'
+include = '^/.*\.py$'
 
 [tool.ruff]
 # Enable Pyflakes `E` and `F` codes by default.
