DEVELOPMENT: [IMPLEMENT] sending user email varification for account activaion

--- a/.env-EXAMPLE
+++ b/.env-EXAMPLE
@@ -8,3 +8,9 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+EMAIL_HOST_USER=example@gmail.com
+EMAIL_HOST_PASSWORD=password(App Password if you using gmail)
